<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <ImageView
                style="@style/HeaderMainImagetStyle"/>
            <TextView
                android:textAlignment="center"
                style="@style/HeaderMainTextStyle"/>
        </LinearLayout>

        <TextView
            android:text="@string/pregunta1"
            style="@style/HeaderTextStyle" />
        <RadioGroup
            android:id="@+id/rp1_radio_group"
            style="@style/HeaderRadioGroupStyle">
            <RadioButton
                android:id="@+id/r1p1_radio_button"
                android:text="@string/respuesta1Pregunta1"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r2p1_radio_button"
                android:text="@string/respuesta2Pregunta1"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r3p1_radio_button"
                android:text="@string/respuesta3Pregunta1"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r4p1_radio_button"
                android:text="@string/respuesta4Pregunta1"
                style="@style/HeaderRadioStyle" />
        </RadioGroup>

        <TextView
            android:text="@string/pregunta2"
            style="@style/HeaderTextStyle" />
        <CheckBox
            android:id="@+id/r1p2_checkbox"
            android:text="@string/respuesta1Pregunta2"
            style="@style/HeaderCheckBoxStyle" />
        <CheckBox
            android:id="@+id/r2p2_checkbox"
            android:text="@string/respuesta2Pregunta2"
            style="@style/HeaderCheckBoxStyle" />
        <CheckBox
            android:id="@+id/r3p2_checkbox"
            android:text="@string/respuesta3Pregunta2"
            style="@style/HeaderCheckBoxStyle" />
        <CheckBox
            android:id="@+id/r4p2_checkbox"
            android:text="@string/respuesta4Pregunta2"
            style="@style/HeaderCheckBoxStyle"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/pregunta3"
            style="@style/HeaderTextStyle" />
        <RadioGroup
            android:id="@+id/rp3_radio_group"
            style="@style/HeaderRadioGroupStyle">
            <RadioButton
                android:id="@+id/r1p3_radio_button"
                android:text="@string/respuesta1Pregunta3"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r2p3_radio_button"
                android:text="@string/respuesta2Pregunta3"
                style="@style/HeaderRadioStyle"/>
            <RadioButton
                android:id="@+id/r3p3_radio_button"
                android:text="@string/respuesta3Pregunta3"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r4p3_radio_button"
                android:text="@string/respuesta4Pregunta3"
                style="@style/HeaderRadioStyle" />
        </RadioGroup>

        <TextView
            android:text="@string/pregunta4"
            style="@style/HeaderTextStyle" />
        <EditText
            android:id="@+id/rp4_edit_text"
            style="@style/HeaderEditStyle" />

        <TextView
            android:text="@string/pregunta5"
            style="@style/HeaderTextStyle" />
        <RadioGroup
            android:id="@+id/rp5_radio_group"
            style="@style/HeaderRadioGroupStyle">
            <RadioButton
                android:id="@+id/r1p5_radio_button"
                android:text="@string/respuesta1Pregunta5"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r2p5_radio_button"
                android:text="@string/respuesta2Pregunta5"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r3p5_radio_button"
                android:text="@string/respuesta3Pregunta5"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r4p5_radio_button"
                android:text="@string/respuesta4Pregunta5"
                style="@style/HeaderRadioStyle" />
        </RadioGroup>

        <TextView
            android:text="@string/pregunta6"
            style="@style/HeaderTextStyle" />
        <CheckBox
            android:id="@+id/r1p6_checkbox"
            android:text="@string/respuesta1Pregunta6"
            style="@style/HeaderCheckBoxStyle" />
        <CheckBox
            android:id="@+id/r2p6_checkbox"
            android:text="@string/respuesta2Pregunta6"
            style="@style/HeaderCheckBoxStyle" />
        <CheckBox
            android:id="@+id/r3p6_checkbox"
            android:text="@string/respuesta3Pregunta6"
            style="@style/HeaderCheckBoxStyle" />
        <CheckBox
            android:id="@+id/r4p6_checkbox"
            android:text="@string/respuesta4Pregunta6"
            style="@style/HeaderCheckBoxStyle"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="@string/pregunta7"
            style="@style/HeaderTextStyle" />
        <EditText
            android:id="@+id/rp7_edit_text"
            style="@style/HeaderEditStyle" />

        <TextView
            android:text="@string/pregunta8"
            style="@style/HeaderTextStyle" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/p8" />
        <RadioGroup
            android:id="@+id/rp8_radio_group"
            style="@style/HeaderRadioGroupStyle">
            <RadioButton
                android:id="@+id/r1p8_radio_button"
                android:text="@string/respuesta1Pregunta8"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r2p8_radio_button"
                android:text="@string/respuesta2Pregunta8"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r3p8_radio_button"
                android:text="@string/respuesta3Pregunta8"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r4p8_radio_button"
                android:text="@string/respuesta4Pregunta8"
                style="@style/HeaderRadioStyle" />
        </RadioGroup>

        <TextView
            android:text="@string/pregunta9"
            style="@style/HeaderTextStyle" />
        <EditText
            android:id="@+id/rp9_edit_text"
            style="@style/HeaderEditStyle"/>

        <TextView
            android:text="@string/pregunta10"
            style="@style/HeaderTextStyle" />
        <RadioGroup
            android:id="@+id/rp10_radio_group"
            style="@style/HeaderRadioGroupStyle" >
            <RadioButton
                android:id="@+id/r1p10_radio_button"
                android:text="@string/respuesta1Pregunta10"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r2p10_radio_button"
                android:text="@string/respuesta2Pregunta10"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r3p10_radio_button"
                android:text="@string/respuesta3Pregunta10"
                style="@style/HeaderRadioStyle" />
            <RadioButton
                android:id="@+id/r4p10_radio_button"
                android:text="@string/respuesta4Pregunta10"
                style="@style/HeaderRadioStyle" />
        </RadioGroup>

        <Button
            style="@style/HeaderButtonStyle"
            android:text="@string/calificar"
            android:onClick="validar"/>

    </LinearLayout>

</ScrollView>